--- a/views/index.html
+++ b/views/index.html
@@ -31,7 +31,11 @@
             <button type="submit">Submit Review</button>
         </form>
     </div>
-
+    <div class="search-box">
+        <label for="searchCompany">Search Company:</label>
+        <input type="text" id="searchCompanyInput" >
+        <button type="button" id="searchButton">Search</button>
+    </div>
     <div class="reviews-container" id="reviewsContainer">
         <h2>All Reviews</h2>
         <div id="reviewsList"></div>
